--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,7 @@
           <!-- <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard"> -->
         </div>
         <div id="centerabout" class="about_div">
-          <a href="styles/imgs/Sergio_barker_res.pdf" download>
+          <a href="styles/imgs/Sergio_barker_resume.pdf" download>
             <h1>My Resume</h1>
           </a>
         </div>
@@ -76,7 +76,7 @@
         <div class="right piece">
             <h1 class="pronam"><a href="http://barkersubaru.com" target="_blank">Subaru Clone</a></h1>
             <p>A partial clone of the Subaru.com website. Built with AngularJs, NodeJs, Express,
-            MongoDb, Gulp and Sass. Select a car, add accessories and "checkout".</p>
+            MongoDb, Gulp and Sass. Select a car, add accessories, and "checkout".</p>
               <p><a href="https://github.com/sbrycebarker/subaruclone" target="_blank">Project GitHub</a></p>
         </div>
         </div>
@@ -92,7 +92,7 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="http://rockshowz.info" target="_blank">RockshowZ</a></h1>
-            <p>An app built as a final/group project at Dev Mountain. This project uses AngularJs, Node, Express, ElephantSql, Auth0 and is hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
+            <p>An app built as a final/group project at Dev Mountain. This project uses AngularJs, NodeJs, Express, ElephantSql, Auth0 and is hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
           later.</p>
               <p><a href="https://github.com/Sergeandarden/rockshowz" target="_blank">Project GitHub</a></p>
           </div>
@@ -109,8 +109,8 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/" target="_blank">To Do App</a></h1>
-            <p>A simple to do list made to apply knowledge of CRUD operations. Create a task with time stamps
-            change or delete them. Pagenation done with Bootstrap.</p>
+            <p>A simple to do list made to apply knowledge of CRUD operations. Create a task with timestamps,
+            change or delete them. Pagination done with Bootstrap.</p>
               <p><a href="https://github.com/sbrycebarker/todoapp" target="_blank">Project GitHub</a></p>
           </div>
         </div>
@@ -126,8 +126,8 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/" target="_blank">Drum Kit</a></h1>
-            <p>A drumkit built watching 30Daysofjavascript. Click the buttons for drum noises and visuals.</p>
-              <p><a href="https://github.com/sbrycebarker/DRUm-KIT" target="_blank">Project GitHub</a></p>
+            <p>A drum kit built by watching 30Daysofjavascript. Click the buttons for drum noises and visuals.</p>
+              <p><a href="https://github.com/sbrycebarker/DRUM-KIT" target="_blank">Project GitHub</a></p>
           </div>
         </div>
         <div id="clockpro" class="project item">
@@ -142,7 +142,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/" target="_blank">Clock</a></h1>
-            <p>A clock made watching 30Daysofjavascript to strengthen javascript skills. Tells the time!</p>
+            <p>A clock made by watching 30Daysofjavascript, to strengthen Javascript skills. It tells the time!</p>
               <p><a href="https://github.com/sbrycebarker/CLOCK" target="_blank">Project GitHub</a></p>
           </div>
         </div>
@@ -158,8 +158,8 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/" target="_blank">Star Wars Planets</a></h1>
-            <p>A simple AngularJs app accessing <a href="http://swapi.co">SWAPI.co</a> and google weather.
-              Jquery animations, angular-ui-router also used. Built as a first project for Dev Mountain.</p>
+            <p>A simple AngularJs app accessing <a href="http://swapi.co" target="_blank">SWAPI.co</a> and Google weather.
+              It uses jQuery animations, angular-ui-router. It was built as a first project for Dev Mountain.</p>
               <p><a href="https://github.com/sbrycebarker/Star-Wars-Planets" target="_blank">Project GitHub</a></p>
           </div>
         </div>
@@ -190,7 +190,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/Photo-Filter/" target="_blank">Image Filter App</a></h1>
-            <p>Upload an Image and add filter using CamanJs.</p>
+            <p>Upload an Image and add filter using <a href="http://camanjs.com/" target="_blank">CamanJs</a>.</p>
               <p><a href="https://github.com/sbrycebarker/Photo-Filter" target="_blank">Project GitHub</a></p>
           </div>
         </div>
@@ -199,14 +199,14 @@
             <a href="https://github.com/sbrycebarker/rockshowz2.0" target="_blank">
               <div id="rock2-0" class="projimg">
                 <div class="projcover rockcov">
-                  <h1 class="go2">GO TO PROJECT</h1>
+                  <h1 class="go2">Project Under construction</h1>
                 </div>
               </div>
             </a>
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="https://github.com/sbrycebarker/rockshowz2.0">RockshowZ</a></h1>
-            <p>A solo rebuild of the RockshowZ app built with SASS a Javascript</p>
+            <p>A solo rebuild of the RockshowZ app built with SASS and Javascript.</p>
               <p><a href="https://github.com/sbrycebarker/rockshowz2.0">Project GitHub</a></p>
           </div>
         </div>
