--- a/views/home.html
+++ b/views/home.html
@@ -142,7 +142,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/" target="_blank">Clock</a></h1>
-            <p>A clock made by watching 30Daysofjavascript, to strengthen Javascript skills. It tells the time!</p>
+            <p>A clock made by watching <a href="https://javascript30.com/">Javascript30</a> to strengthen Javascript skills. It tells the time!</p>
               <p><a href="https://github.com/sbrycebarker/CLOCK" target="_blank">Project GitHub</a></p>
           </div>
         </div>
