--- a/views/home.html
+++ b/views/home.html
@@ -126,7 +126,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/" target="_blank">Drum Kit</a></h1>
-            <p>A drum kit built by watching 30Daysofjavascript. Click the buttons for drum noises and visuals.</p>
+            <p>A drum kit built by watching <a href="https://javascript30.com/">Javascript30</a>. Click the buttons for drum noises and visuals.</p>
               <p><a href="https://github.com/sbrycebarker/DRUM-KIT" target="_blank">Project GitHub</a></p>
           </div>
         </div>
