--- a/views/home.html
+++ b/views/home.html
@@ -158,8 +158,8 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/" target="_blank">Star Wars Planets</a></h1>
-            <p>A simple AngularJs app accessing <a href="http://swapi.co" target="_blank">SWAPI.co</a> and Google weather.
-              It uses jQuery animations, angular-ui-router. It was built as a first project for Dev Mountain.</p>
+            <p>A simple AngularJs app accessing <a href="http://swapi.co" target="_blank">SWAPI.co</a> and <a href="https://openweathermap.org/">
+                Openweathermap</a>. It uses jQuery animations, angular-ui-router. It was built as a first project for Dev Mountain.</p>
               <p><a href="https://github.com/sbrycebarker/Star-Wars-Planets" target="_blank">Project GitHub</a></p>
           </div>
         </div>
