--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,9 @@
 <body>
     <div id="top" class="sec">
-      <div class="namepos">
+      <div class="namepos name">
         <h1>Sergio Barker</h1>
         <!-- <h1><hr></h1> -->
-        <!-- <h3>Web Developer</h3> -->
+        <h3 class="webdev">Web Developer</h3>
       </div>
     </div>
     <div id="about" class="sec1 sec">
@@ -165,7 +165,7 @@
         </div>
         <!-- <div id="thewritersgang" class="project item">
           <div class="left piece">
-            <a href="http://138.68.60.37:8082/#!/">
+            <!-- <a href="http://138.68.60.37:8082/#!/"> -->
               <div id="writers" class="projimg">
                 <div class="projcover">
                   <h1 class="go2">In Progress</h1>
