--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -119,28 +119,28 @@
     background-image: url("./imgs/darkwood.jpg");
     background-size: cover;
     display: flex;
+    flex-direction: column;
     background-attachment: fixed;
   }
 
-  .namepos h1 {
-    margin: auto;
-    width: 60%;
-    font-size: 18px;
-    letter-spacing: 1px;
-  }
-
   .namepos {
-    height: 7%;
-    width: 200px;
+    height: 150px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
     margin: auto;
     color: white;
-    background-color: #1A1919;
-    /* border: 2px solid black; */
     border-radius: 0;
     text-align: center;
+  }
+
+  .name {
+    background-color: #1A1919;
+  }
+
+  .pos {
+    background-color: none
   }
 
   #about {
