--- a/views/home.html
+++ b/views/home.html
@@ -165,7 +165,7 @@
         </div>
         <!-- <div id="thewritersgang" class="project item">
           <div class="left piece">
-            <!-- <a href="http://138.68.60.37:8082/#!/"> -->
+            <a href="http://138.68.60.37:8082/#!/">
               <div id="writers" class="projimg">
                 <div class="projcover">
                   <h1 class="go2">In Progress</h1>
@@ -177,7 +177,7 @@
           <h1 class="pronam"><a href="http://138.68.60.37:8082/#!/">The Writers Gang</a></h1>
             <p>Project currently being built for client</p>
           </div>
-        </div> -->
+        </div>  -->
         <div id="Image-filter-app" class="project item">
           <div class="left piece">
             <a href="https://sbrycebarker.github.io/Photo-Filter/" target="_blank">
