--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -571,6 +571,7 @@
     display: flex;
     flex-direction: row;
     background-color: none;
+    border-radius: 15px;
     opacity: .9;
     justify-content: center;
     color: inherit;
