--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
         </div>
         <div id="leftabout" class="about_div">
           <h1>I am a full-stack javascript developer, living in Provo, Ut.<br>
-          I love cars, cooking, and gaming and am ready to get to work.</h1>
+          I love coding, cars, cooking, and am ready to get to work.</h1>
           <!-- <a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md" class="cuttingboard"></a> -->
           <!-- <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard"> -->
         </div>
