--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <body>
     <div id="top" class="sec">
-      <div class="namepos name">
+      <div class="namepos name animated fadeIn">
         <h1>Sergio Barker</h1>
         <!-- <h1><hr></h1> -->
         <h3 class="webdev">Web Developer</h3>
@@ -95,6 +95,21 @@
             <p>An app built as a final/group project at Dev Mountain. This project uses AngularJs, NodeJs, Express, ElephantSql, Auth0 and is hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
           later.</p>
               <p><a href="https://github.com/Sergeandarden/rockshowz" target="_blank">Project GitHub</a></p>
+          </div>
+        </div>
+        <div id="rock2-0" class="project item">
+          <div class="left piece">
+            <a href="http://138.68.60.37:8080/#!/">
+              <div id="writers" class="projimg">
+                <div class="projcover">
+                  <h1 class="go2">In Progress</h1>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="right piece">
+          <h1 class="pronam"><a href="http://138.68.60.37:8080/#!/">RockshowZ 2.0</a></h1>
+            <p>My rebuild of the group project from DevMountain</p>
           </div>
         </div>
         <div id="todopro" class="project item">
