--- a/views/home.html
+++ b/views/home.html
@@ -97,10 +97,10 @@
               <p><a href="https://github.com/Sergeandarden/rockshowz" target="_blank">Project GitHub</a></p>
           </div>
         </div>
-        <div id="rock2-0" class="project item">
+        <div id="rock20" class="project item">
           <div class="left piece">
             <a href="http://138.68.60.37:8080/#!/">
-              <div id="writers" class="projimg">
+              <div id="rock2-0" class="projimg">
                 <div class="projcover">
                   <h1 class="go2">In Progress</h1>
                 </div>
