--- a/views/home.html
+++ b/views/home.html
@@ -97,7 +97,7 @@
               <p><a href="https://github.com/Sergeandarden/rockshowz" target="_blank">Project GitHub</a></p>
           </div>
         </div>
-        <div id="rock20" class="project item">
+        <div id="rock20pro" class="project item">
           <div class="left piece">
             <a href="http://138.68.60.37:8080/#!/">
               <div id="rock2-0" class="projimg">
@@ -109,7 +109,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="http://138.68.60.37:8080/#!/">RockshowZ 2.0</a></h1>
-            <p>My rebuild of the group project from DevMountain</p>
+            <p>A solo rebuild of the RockshowZ app built with SASS and Javascript.</p>
           </div>
         </div>
         <div id="todopro" class="project item">
@@ -209,7 +209,7 @@
               <p><a href="https://github.com/sbrycebarker/Photo-Filter" target="_blank">Project GitHub</a></p>
           </div>
         </div>
-        <div id="rock20pro" class="project item">
+        <!-- <div id="rock20pro" class="project item">
           <div class="left piece">
             <a href="https://github.com/sbrycebarker/rockshowz2.0" target="_blank">
               <div id="rock2-0" class="projimg">
@@ -224,7 +224,7 @@
             <p>A solo rebuild of the RockshowZ app built with SASS and Javascript.</p>
               <p><a href="https://github.com/sbrycebarker/rockshowz2.0">Project GitHub</a></p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <div id="contact" class="sec4 sec">
