--- a/views/home.html
+++ b/views/home.html
@@ -41,6 +41,7 @@
           <ul><a href="https://nodejs.org/en/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-nodejs-plain-wordmark"></i></a></ul>
           <ul><a href="https://www.w3schools.com/css/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-css3-plain-wordmark"></i></a></ul>
           <ul><a href="https://gulpjs.com/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-gulp-plain"></i></a></ul>
+          <ul><a href="https://www.nginx.com/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-nginx-original"></i></a></ul>
       </div>
     </div>
     <div id="projects" class="sec3 sec">
