--- a/views/home.html
+++ b/views/home.html
@@ -66,7 +66,7 @@
         </div>
         <div id="subpro" class="project item">
           <div class="left piece">
-          <a href="http://barkersubaru.com" target="_blank">
+          <a href="https://barkersubaru.com" target="_blank">
             <div id="subaru" class="projimg">
               <div class="projcover">
                 <h1 class="go2">GO TO PROJECT</h1>
@@ -83,7 +83,7 @@
         </div>
         <div id="rockpro" class="project item">
           <div class="left piece">
-            <a href="http://rockshowz.info" target="_blank">
+            <a href="https://rockshowz.info" target="_blank">
               <div id="rockshowZ" class="projimg">
                 <div class="projcover rockcov">
                   <h1 class="go2">GO TO PROJECT</h1>
